# textprocessor

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  build.sh  build_bazel.sh  build_docker.sh  build_make.sh  cmd_build_bazel.sh  cmd_debug_run.sh  cmd_go_run.sh  cmd_run.sh  config.sh  env.bzl  go.mod  go.sum  helpers.bzl  run.sh  version_inc.sh
cmd/charsprocessor/: BUILD.bazel  main.go
cmd/wordsprocessor/: BUILD.bazel  main.go
configs/charsprocessor/: config.yaml
configs/wordsprocessor/: config.yaml  values.yaml
services/charsprocessor/: BUILD.bazel  Makefile  service.go  service_gen.go
services/charsprocessor/config/: BUILD.bazel
services/charsprocessor/functions/: BUILD.bazel  outputcharoutputcharendpointfunc.go
services/charsprocessor/grpc/: BUILD.bazel  Makefile  charsprocessor.proto
services/wordsprocessor/: BUILD.bazel  service.go  service_gen.go
services/wordsprocessor/config/: BUILD.bazel
services/wordsprocessor/functions/: BUILD.bazel  filterwordfunc.go  outputwordoutputwordendpointfunc.go  splittextfunc.go
services/wordsprocessor/proto/: BUILD.bazel  Makefile  textdata.proto
services/wordsprocessor/serdes/: BUILD.bazel  textdata.go
