module(
    name = "textprocessor",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "protobuf", version = "27.1")
bazel_dep(name = "gazelle", version = "0.37.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.config(
    go_env = {
        "GOPRIVATE": "github.com/gorundebug",
    },
)
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
	"com_github_gorundebug_servicelib",
	"org_golang_google_grpc",
	"com_github_sirupsen_logrus",
	"org_golang_google_protobuf",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.3")
go_sdk.host()