load("//:env.bzl", "PROJECT_PATH")
load("//:helpers.bzl", "get_current_dir_name")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = get_current_dir_name(),
    srcs = glob(["*.go"]),
    importpath = "{}/services/charsprocessor/config".format(PROJECT_PATH),
    visibility = ["//visibility:public"],
    deps = [],
)